--- a/content/assignment/09-lab.Rmd
+++ b/content/assignment/09-lab.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 10 - HPC"
+title: "Lab 9 - HPC"
 output: tufte::tufte_html
 link-citations: yes
 ---
@@ -51,48 +51,58 @@ fun2 <- function(x) {
 
 We will now turn our attention to non-parametric 
 [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)).
-Among the many uses, non-parametric bootstrapping allow us to obtain confidence
+Among its many uses, non-parametric bootstrapping allow us to obtain confidence
 intervals for parameter estimates without relying on parametric assumptions.
 
 The main assumption is that we can approximate many experiments by resampling
-observations from our original dataset. 
+observations from our original dataset, which reflects the population. 
 
-El método de Bootstrap (Efron 1979) (o remuestreo) puede ser utilizado para aproximar distribuciones de estadísticos de manera no-paramétrica–que significa sin asumir una forma funcional en particular–con el simple supuesto de que la muestra observada refleja la distribución de la población.
+This function implements the non-parametric bootstrap:
 
-La siguiente función implementa bootstrap noparamétrico de manera secuencial (no en paralelo)
-
-```
-mi_boot <- function(dat, stat, R, ncpus = 1L) {
+```r
+my_boot <- function(dat, stat, R, ncpus = 1L) {
   
-  # Generando indices aleatorios
+  # Getting the random indices
   n <- nrow(dat)
   idx <- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
  
-  # Creando cluster 
-  # ..... ACA VA EL CODIGO PARA ARMAR EL CLUSTER
+  # Making the cluster using `ncpus`
+  # STEP 1: GOES HERE
+  # STEP 2: GOES HERE
   
-  # Llamando funcion
-  # ...... ESTA FUNCION DEBE SER REEMPLAZADA POR parSapply...
-  t(sapply(seq_len(R), function(i) {
+    # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
+  ans <- lapply(seq_len(R), function(i) {
     stat(dat[idx[,i], , drop=FALSE])
-  }))
+  })
+  
+  # Coercing the list into a matrix
+  ans <- do.call(rbind, ans)
+  
+  # STEP 4: GOES HERE
+  
+  ans
   
 }
-# Bootstrap the modelo OLS
-mi_stat <- function(d) coef(lm(y ~ x, data=d))
+```
 
-# Simulando data
+1. Use the previous pseudocode, and make it work with parallel. Here is just an example
+for you to try:
+
+```r
+# Bootstrap of an OLS
+my_stat <- function(d) coef(lm(y ~ x, data=d))
+
+# DATA SIM
 set.seed(1)
 n <- 500; R <- 1e4
 
 x <- cbind(rnorm(n)); y <- x*5 + rnorm(n)
 
-# Chequeando que obtenemos datos razonables. Boot puede ser comparado con el 
-# intervalo de confianza que obtenemos de la regresion lineal.
+# Checking if we get something similar as lm
 ans0 <- confint(lm(y~x))
-ans1 <- mi_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+ans1 <- my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
 
-# Comparando IC con el bootstrap rustico y el modelo OLS.
+# You should get something like this
 t(apply(ans1, 2, quantile, c(.025,.975)))
 ##                   2.5%      97.5%
 ## (Intercept) -0.1372435 0.05074397
@@ -103,4 +113,24 @@ ans0
 ## x            4.8650100 5.04883353
 ```
 
-Siguiendo los comentarios incluidos en el cuerpo de la función, modifica la función para que implemente bootstrapping en paralelo. Compara tus resultados utilizando 1, 2 y (si disponible) 4 procesadores.
+2. Check whether your version actually goes faster than the non-parallel version:
+
+
+```r
+microbenchmark::microbenchmark(
+  one_core = my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 1L),
+  two_core = my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+)
+```
+
+## Problem 4: Compile this markdown document using Rscript
+
+Once you have saved this Rmd file, try running the following command
+in your terminal:
+
+```bash
+Rscript --vanilla -e 'rmarkdown::render("[full-path-to-your-Rmd-file.Rmd]")' &
+```
+
+Where `[full-path-to-your-Rmd-file.Rmd]` should be replace with the full path to
+your Rmd file... :).
